--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ workflow: !reference [.workflow]
     architectures: 'x86_64 ppc64le aarch64 s390x'
     kpet_tree_family: rhel8
     native_tools: 'true'
+    disttag_override: '.el8_5'
 
 # Realtime specific configuration
 .realtime_check:
@@ -31,6 +32,7 @@ workflow: !reference [.workflow]
     builder_image: quay.io/cki/builder-rhel8
     name: kernel-rt-rhel8
     merge_branch: 8.5-rt
+    disttag_override: '.el8_5'
 
 # Full RT pipeline for -rt branch
 .realtime_full:
@@ -40,6 +42,7 @@ workflow: !reference [.workflow]
     builder_image: quay.io/cki/builder-rhel8
     name: kernel-rt-rhel8
     kpet_tree_family: rhel8-rt
+    disttag_override: '.el8_5'
     RUN_ONLY_FOR_RT: 'true'
 
 # regular pipelines
